fix: 修正玩家使用瓶子时的逻辑和格式化提示信息 fix: 使用游戏时间替换系统时间以同步服务器和客户端时间 style: 移除不必要的静态导入和方法调用 docs: 更新项目检查配置以启用更多代码质量检查